Fix overlapping avatar in quote container

--- a/app/javascript/styles/mastodon/components.scss
+++ b/app/javascript/styles/mastodon/components.scss
@@ -1080,7 +1080,7 @@
   }
 
   .display-name {
-    padding-left: 20px;
+    padding-left: 56px;
   }
 
   .detailed-status__display-name {
